# ggt

./: .editorconfig  .gitattributes  .gitignore  404.html  README.md  addons.jsonc  export_presets.cfg  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  icon.svg.import  index.html  mkdocs.yaml  project.godot  project.sln  pyproject.toml  sitemap.xml
.config/: dotnet-tools.json
.github/workflows/: build.yml  build.yml.md  ci.yml  docs.yml  test.yml
blog/: index.html
blog/2025/10/28/test-post/: index.html
blog/archive/2025/: index.html
blog/category/general/: index.html
docs/: README.md  pyproject.toml
docs/blog/posts/: test-post.md
docs/docs/blog/: .authors.yml
docs/docs/blog/posts/: test-post.md
docs/stylesheets/: index.css
resources/audio_bus/: default_bus_layout.tres
resources/themes/: default_theme.tres
scenes/init/: init.torch  init.tscn
screens/title_screen/: title_screen.tscn
scripts/python/: force_pull.py  install_addons.py
scripts/shell/: dev.nu
search/: search_index.json
tests/unit/: test_smoke.gd  test_smoke.gd.uid
views/pause_menu/: pause_menu.tscn
views/settings_menu/: settings_menu.tscn
